--- a/Book-Store-API/package.json
+++ b/Book-Store-API/package.json
@@ -11,6 +11,7 @@
 		"author": "",
 		"license": "ISC",
 		"dependencies": {
+				"dotenv": "^16.3.1",
 				"express": "^4.18.2",
 				"express-async-handler": "^1.2.0",
 				"joi": "^17.11.0",
