--- a/Book-Store-API/package.json
+++ b/Book-Store-API/package.json
@@ -18,6 +18,7 @@
 				"joi": "^17.11.0",
 				"jsonwebtoken": "^9.0.2",
 				"mongoose": "^8.0.3",
+				"nodemailer": "^6.9.7",
 				"nodemon": "^2.0.18"
 		}
 }
