--- a/Book-Store-API/package.json
+++ b/Book-Store-API/package.json
@@ -15,7 +15,9 @@
 				"dotenv": "^16.3.1",
 				"express": "^4.18.2",
 				"express-async-handler": "^1.2.0",
+				"helmet": "^7.1.0",
 				"joi": "^17.11.0",
+				"joi-password-complexity": "^5.2.0",
 				"jsonwebtoken": "^9.0.2",
 				"mongoose": "^8.0.3",
 				"multer": "^1.4.5-lts.1",
